--- a/trakberry/templates/cell_track_9341_date.html
+++ b/trakberry/templates/cell_track_9341_date.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="10;">
+
 
     <title>9341 Tracking</title>
     <meta charset="utf-8">
@@ -140,7 +140,7 @@
     <div class="containter main d-flex justify-content-center">
         <div class="L10R80">
             <div class="heading" style="background-color:{{op_color.120}};">
-                10R80 Predict ({{counts.1533}})
+                10R80 Predict ({{op.120}})
             </div>
             <div class="mainline"> <!-- MainLine Production-->
                 <div class="subheading borders">Mainline</div>
@@ -545,7 +545,7 @@
             onclick="window.open('/dashboard/track_graph_track/get/1547/', 'newwindow', 'width=1400, height=600'); return false;">
             1547</a>
     </div>
-    <div class="asset-count">(---)</div>
+    <div class="asset-count">({{counts.1546}})</div>
 </div>
 
                 </div>
@@ -628,13 +628,13 @@
                 </div>
 
                 <div class="op">  <!-- OP 120  -->
-                    <div class="asset borders" style="background-color:#D5D5D5">
+                    <div class="asset borders" style="background-color:{{codes.40.2}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1816/"
             onclick="window.open('/dashboard/track_graph_track/get/1554/', 'newwindow', 'width=1400, height=600'); return false;">
             1816</a>
     </div>
-    <div class="asset-count">(97)</div>
+    <div class="asset-count">({{counts.1816}})</div>
 </div>
 
                 </div>
