--- a/trakberry/templates/master2.html
+++ b/trakberry/templates/master2.html
@@ -164,7 +164,8 @@
 										<li><a href="{{request.session.local_toggle}}/track_single">track_single</a></li>  
 										<li><a href="{{request.session.local_toggle}}/prod_ab1v_reaction">track_1703 / 1704</a></li>  
 										<li><a href="{{request.session.local_toggle}}/tech_pm_add">Tech PM Add</a></li> 
-										<li><a href="{{request.session.local_toggle}}/manpower_calculation">Manpower_calcuation</a></li>  
+										<li><a href="{{request.session.local_toggle}}/manpower_calculation">Manpower_calcuation</a></li> 
+										<li><a href="{{request.session.local_toggle}}/track_9341_history_date">9341 History</a></li>  
 									</ul>  
 								</li>
 
