--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -293,13 +293,15 @@
 					
                     <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span> Production<b class="caret"></b></a>
                          <ul class="dropdown-menu multi-level"  style="background-color:rgb(245, 237, 219)" >
-                            <li><a href="{{request.session.local_toggle}}/mgmt_track_week">Track the Week<b><mark>(** New ! **)</mark></b></a></li>
+							<li><a href="{{request.session.local_toggle}}/track_9341_history_date">10R Production History<b><mark>(** New ! **)</mark></b></a></li>
+							<li><a href="#">Track the Week<b><mark></mark></b></a></li>
+                            <!-- <li><a href="{{request.session.local_toggle}}/mgmt_track_week">Track the Week<b><mark></mark></b></a></li> -->
 							<li><a href="{{request.session.local_toggle}}/mgmt_goals">Enter Targets</a></li>
 							<li><a href="{{request.session.local_toggle}}/mgmt_production_counts">Production Numbers</a></li>
 							<li><a href="#">Production Reports</a></li>
                              <li class="divider"   style="background-color:rgb(192, 178, 178)" ></li> 
                             <li><a href="{{request.session.local_toggle}}/mgmt_production">Production Entries</a></li>
-                            <li><a href="{{request.session.local_toggle}}/mgmt_production_hourly">Hourly Entries</a></li>
+                            <!-- <li><a href="{{request.session.local_toggle}}/mgmt_production_hourly">Hourly Entries</a></li> -->
                             <li><a href="{{request.session.local_toggle}}/mgmt_cycletime">Cycle Times</a></li>
                         </ul>
                      </li>
