Added color to history 10R80

--- a/trakberry/templates/track_9341_history_date.html
+++ b/trakberry/templates/track_9341_history_date.html
@@ -5,15 +5,16 @@
         table {
           border-collapse: collapse;
           border-spacing: 0;
-          width: 99%;scrap_ent = 0
+          width: 56%;scrap_ent = 0
           border: 1px solid #ddd;
+          border-radius: 30px;
         }
         th, td {
           text-align: left;
           padding: 7px;
         }
-        tr:nth-child(odd){background-color: #a8b4a9}
-        tr:nth-child(even){background-color: #a8b4a9}
+        tr:nth-child(odd){background-color: #ccbc99}
+        tr:nth-child(even){background-color: #ccbc99}
         a.blue:link {color: black;}
         a.blue:active {color: black;}
         a.blue:visited {color: black;}
@@ -25,7 +26,7 @@
 <table style="overflow-x:auto;">
     <tr><th nowrap>
 
-<input style="background-color: rgb(177, 167, 182);border-radius: 10px;width:80px;height:30px;font-weight: 400;font-size:11px;align=left;" type="submit" value="Update"></th>
+<input style="background-color: rgb(177, 167, 182);border-radius: 10px;width:80px;height:30px;font-weight: 400;font-size:11px;align=left;" type="submit" value="ENTER"></th>
 
 
 
