--- a/trakberry/templates/redirect_cell_track_9341_new.html
+++ b/trakberry/templates/redirect_cell_track_9341_new.html
@@ -1,3 +1,3 @@
 
-<!-- <meta http-equiv="refresh" content="0; url=http://pmdsdata12/dashboard/cell_track_9341/" /> -->
-<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/cell_track_9341_NEW" />
+<meta http-equiv="refresh" content="0; url=http://pmdsdata12/dashboard/cell_track_9341/" />
+<!-- <meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/cell_track_9341_NEW" /> -->
