added down or not button on maintenance app

--- a/trakberry/templates/kiosk/kiosk_menu.html
+++ b/trakberry/templates/kiosk/kiosk_menu.html
@@ -21,9 +21,8 @@
 	</div>
 	<div class="frame1"><br><br><br><br><br><br><br>
 		
-		<button class="button" type="button">
-			
-			<font size="6"><b>10R Need Tech</b></font><br><font size="5" style="color:rgb(132, 133, 73);"><b>** COMING SOON **</b></font>
+		<button class="button" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/down_10r';">
+			<font size="6"><b>10R Need Tech</b></font><br><font size="5" style="color:rgb(132, 133, 73);"><b>** NEW **</b></font>
 		</button>
 	</div>
 	<div class="frame1"><br><br><br><br><br><br><br>
