--- a/trakberry/templates/main.html
+++ b/trakberry/templates/main.html
@@ -132,6 +132,168 @@ html, body {height: 100%;width: 100%;padding: 0;margin: 0;}
 
 	.frame8 {color:black;text-align:center;float:left;width:60%}
 	.frame9{color:black;text-align:center;float:left;width:35%;position:relative;left:5px;}
+
+.button {
+ 
+ height: 45px;
+ text-align: center;
+ cursor: pointer;
+ outline: none;
+ color: #000000;
+background-color: #D1CDC2;
+border: none;
+border-radius: 15px;
+box-shadow: 0 7px #999;
+}
+.button:hover {background-color: #BEB2A7}
+.button:active {
+background-color: #BEB2A7;
+box-shadow: 0 8px #666;
+transform: translateY(8px);
+}
+.button2 {
+height: 45px;
+ text-align: center;
+ cursor: pointer;
+ outline: none;
+ color: #000000;
+background-color: #89afce;
+border: none;
+border-radius: 15px;
+box-shadow: 0 7px #5c7b94;
+}
+.button2:hover {background-color: #89afce}
+.button2:active {
+background-color: #89afce;
+box-shadow: 0 8px  #5c7b94;
+transform: translateY(8px);
+}
+.button3 {
+height: 45px;
+ text-align: center;
+ cursor: pointer;
+ outline: none;
+ color: #000000;
+background-color: #ce9989;
+border: none;
+border-radius: 15px;
+box-shadow: 0 7px #5c7b94;
+}
+.button3:hover {background-color:  #c9684b;}
+.button3:active {
+background-color: #ce9989;
+box-shadow: 0 8px  #5c7b94;
+transform: translateY(8px);
+}
+.button4 {
+height: 70px;
+ text-align: center;
+ cursor: pointer;
+ outline: none;
+ color: #000000;
+background-color: #ce8b89;
+border: none;
+border-radius: 15px;
+box-shadow: 0 7px #5c7b94;
+}
+.button4:hover {background-color:  #ad6e6c;}
+.button4:active {
+background-color: #8a513f;
+box-shadow: 0 8px  #5c7b94;
+transform: translateY(8px);
+}
+.button5 {
+height: 70px;
+ text-align: center;
+ cursor: pointer;
+ outline: none;
+ color: #000000;
+background-color: #61ee54;
+border: none;
+border-radius: 15px;
+box-shadow: 0 7px #5c7b94;
+}
+.button5:hover {background-color:  #51c546;}
+.button5:active {
+background-color: #48ad3e;
+box-shadow: 0 8px  #5c7b94;
+transform: translateY(8px);
+}
+.button6 {
+
+ height: 45px;
+ text-align: center;
+ cursor: pointer;
+ outline: none;
+ color: #000000;
+background-color: #D1CDC2;
+border: none;
+border-radius: 15px;
+box-shadow: 0 7px #999;
+}
+.button6:hover {background-color: #BEB2A7}
+.button6:active {
+background-color: #BEB2A7;
+box-shadow: 0 8px #666;
+transform: translateY(8px);
+}
+.button_g {
+
+ height: 45px;
+ text-align: center;
+ cursor: pointer;
+ outline: none;
+ color: #000000;
+background-color: #8fff83;
+border: none;
+border-radius: 15px;
+box-shadow: 0 7px #999;
+}
+.button_g:hover {background-color: #8fff83}
+.button_g:active {
+background-color: #8fff83;
+box-shadow: 0 8px #666;
+transform: translateY(8px);
+}
+.button_r {
+
+ height: 45px;
+ text-align: center;
+ cursor: pointer;
+ outline: none;
+ color: #000000;
+background-color: #ff5c33;
+border: none;
+border-radius: 15px;
+box-shadow: 0 7px #999;
+}
+.button_r:hover {background-color: #ff5c33}
+.button_r:active {
+background-color: #ff5c33;
+box-shadow: 0 8px #666;
+transform: translateY(8px);
+}
+.button_y {
+
+ height: 45px;
+ text-align: center;
+ cursor: pointer;
+ outline: none;
+ color: #000000;
+background-color: yellow;
+border: none;
+border-radius: 15px;
+box-shadow: 0 7px #999;
+}
+.button_y:hover {background-color: yellow}
+.button_y:active {
+background-color: yellow;
+box-shadow: 0 8px #666;
+transform: translateY(8px);
+}
+
+
+
 </style>
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
