--- a/trakberry/templates/master2.html
+++ b/trakberry/templates/master2.html
@@ -153,6 +153,7 @@
 										<li><a href="{{request.session.local_toggle}}/track_email">Track Email</a></li> 
 										<li><a href="{{request.session.local_toggle}}/cell_track_9341_mobile">9341 Cell MOBILE</a></li>  
 										<li><a href="{{request.session.local_toggle}}/cell_track_9341">9341 Cell</a></li>  
+										<li><a href="{{request.session.local_toggle}}/cell_track_9341_v2">9341 Cell Track Underperformer</a></li>  
 										<li><a href="{{request.session.local_toggle}}/cell_track_1467">1467 Cell</a></li>  
 										<li><a href="{{request.session.local_toggle}}/cell_track_8670">8670 Cell</a></li>  
 										<li><a href="{{request.session.local_toggle}}/wip_update">wip_update</a></li>  
