--- a/trakberry/templates/cell_track_9341_v2_mobile.html
+++ b/trakberry/templates/cell_track_9341_v2_mobile.html
@@ -48,87 +48,86 @@
     </style>
     <style>
         .main{
-            padding-top: 15px;            
+            padding: 5px;
         }
         .heading {
-            font-weight: bold;
-            font-size: x-large;
+            font-weight: bolder;
+            font-size: medium;
             color: black;
             text-align: center;
             background-color: #bdb4b3;
-            padding: 30px;
-            margin-bottom: 20px;
         }
         .subheading {
             font-weight: bolder;
-            font-size: larger;
+            font-size: medium;
             color: black;
             text-align: center;
             background-color: #bdb4b3;
-            padding: 10px;
         }
-
         .c-op {
-            flex: 0 0 100px;
+            flex: 0 0 50px;
             text-align: center;
-            padding: 10px 0;
+            padding: 5px 0;
             background-color:#b0aea9;
-            align-items: center;
         }
         .op {
             display: flex;
-            height: 70px;
+            height: 50px;
             width: 100%
         }
         .L10R80 {
             text-align: center;
             float: left;
             margin-bottom: 5px;
-            width: 1060px;
+            width: 450px;
         }
         .line-spacer{
             color: black;
             text-align: center;
             float: left;
-            width: 100px;
+            margin-bottom: 5px;
+            width: 20px;
         }
         .L10R60 {
             color: black;
             text-align: center;
             float: left;
             margin-bottom: 5px;
-            width: 420px;
+            width: 210px;
         }
         .mainline {
+            color: black;
+            text-align: center;
             float: left;
-            width: 420px;
+            margin-bottom: 5px;
+            width: 210px;
         }
         .offline {
             color: black;
             text-align: center;
             float: left;
             margin-bottom: 5px;
-            width: 320px;
+            width: 160px;
         }
         .uplift {
             color: black;
             text-align: center;
             float: left;
             margin-bottom: 5px;
-            width: 320px;
+            width: 80px;
         }
         .asset{  
             /* all items in div same size (https://stackoverflow.com/a/29503264) */
             flex: 1 1 0px;
-            padding: 10px 0;
+            padding: 5px 0;
         }
         .asset-number{
             font-weight: bolder;
-            font-size: large;
+            font-size: small;
         }
         .asset-count{
             font-weight: bolder;
-            font-size: medium;
+            font-size: x-small;
         }
         body {
             background-color: rgb(151, 165, 177);
