Launching the Tech App but only to test outside Kiosk until size looks ok on IPad

--- a/trakberry/templates/cell_track_9341_v2_mobile.html
+++ b/trakberry/templates/cell_track_9341_v2_mobile.html
@@ -8,7 +8,7 @@
 <head>
 
 
-    <title>9341 Tracking</title>
+    <title>9341 Trackingg</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -136,10 +136,21 @@
             border: 1px solid gray;
             margin-left: -1px;
             margin-bottom: -1px;            
-        }        
-    </style>
+        }       
+        
+        
+        .bb {
+Transform:scale(1.0);
+}
+
+</style>
+
+
 </head>
 <body>
+    <div class="bb">  <!-- Scale Size Start-->
+
+
     <div class="containter main d-flex justify-content-center">
         <div class="L10R80">
             <div class="heading" style="background-color:{{op_color.120}};">
@@ -1243,5 +1254,10 @@
             </div>
         </div>
     </div>
+
+
+</div><!-- Scale Size End-->
+
+
 </body>
 </html>
