--- a/trakberry/templates/kiosk/down_10r_style.html
+++ b/trakberry/templates/kiosk/down_10r_style.html
@@ -180,6 +180,13 @@
 		box-shadow: 0 8px #666;
 		transform: translateY(8px);
 	}
+
+
+	.tech_10r_scale_ipad {Transform:scale(0.7);}
+	.tech_10r_scale {Transform:scale(1.0);}
+	
+
+
 </style>
 
 </head>
