--- a/trakberry/templates/production/mgmt_users_logins_add.html
+++ b/trakberry/templates/production/mgmt_users_logins_add.html
@@ -61,7 +61,7 @@
 <select style="font-size:14px;width:320px;height:30px;margin-left:5%;" name="department">
 	<option selected = "selected">{{request.session.department}}</option>
   <option value="hr">HR</option>
-	<option value="maint">Maintenance</option>
+	<option value="Maintenance">Maintenance</option>
 	<option value="maint_mgmt">Maintenance Manager</option>
 	<option value="main">Production</option>
 	<option value="Production Manager">Production Manager</option>
