--- a/trakberry/templates/tech_pass.html
+++ b/trakberry/templates/tech_pass.html
@@ -18,10 +18,7 @@
 			<b><u>Dept</b></u>&nbsp;
 			<select name ="pass" style="color:blue;">
 			<option value="Electrician">Electrician</option>
-			<option value="Millwright">Millwright</option>
-			<option value="Fluid Tech">Fluid Tech</option>
-			<option value="Engineering">Engineering</option>
-			<option value="Contractor">Contractor</option></select>
+			<option value="Millwright">Millwright</option></select>
 		</div>
 		<div class="col-sm-2">
 			<!-- <input type="submit"> -->
