--- a/trakberry/templates/master2.html
+++ b/trakberry/templates/master2.html
@@ -153,6 +153,7 @@
 										<li><a href="{{request.session.local_toggle}}/track_email">Track Email</a></li> 
 										<li><a href="{{request.session.local_toggle}}/cell_track_9341_mobile">9341 Cell MOBILE</a></li>  
 										<li><a href="{{request.session.local_toggle}}/cell_track_9341">9341 Cell</a></li>  
+										<li><a href="{{request.session.local_toggle}}/cell_track_9341_TV">9341 Cell_TV</a></li>  
 										<li><a href="{{request.session.local_toggle}}/cell_9341_screen">9341 Cell Track Underperformer</a></li> 
 										<li><a href="{{request.session.local_toggle}}/cell_9341_mobile">9341 Cell Track Underperformer MOBILE</a></li>  
 										<li><a href="{{request.session.local_toggle}}/cell_track_1467">1467 Cell</a></li>  
@@ -168,6 +169,8 @@
 										<li><a href="{{request.session.local_toggle}}/tech_pm_add">Tech PM Add</a></li> 
 										<li><a href="{{request.session.local_toggle}}/manpower_calculation">Manpower_calcuation</a></li> 
 										<li><a href="{{request.session.local_toggle}}/track_9341_history_date">9341 History</a></li>  
+										<li><a href="{{request.session.local_toggle}}/down_10r">10R Down App</a></li>  
+										<li><a href="{{request.session.local_toggle}}/tech_down_10r">10R Tech App</a></li>  
 									</ul>  
 								</li>
 
