--- a/trakberry/templates/tech_down_10r.html
+++ b/trakberry/templates/tech_down_10r.html
@@ -10,7 +10,7 @@
 
 <br>
 <center>
-    
+    <div class="tech_10r_scale_ipad"> <!-- Scale Size-->
     <div class="wrapper_main">
         <div class="mainset2">  
             <font style="font-size: 50px; color:white; text-shadow: 5px 5px 5px rgb(177, 177, 177), 0 0 25px rgb(160, 244, 247), 0 0 5px rgb(75, 184, 11);">10R80</font><br>
@@ -68,10 +68,10 @@
 		    <button class="button_g" type="button"><font size="2">
             <b>&nbsp;&nbsp;&nbsp;&nbsp;{{i.1}}&nbsp;&nbsp;&nbsp;&nbsp;</b></font></button>
             {% elif i.3 == 'R' %}
-            <button class="button_r" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/down_10r_fix/get/{{i.1}}';"><font size="2">
+            <button class="button_r" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/down_10r_fix/get/{{i.4}}';"><font size="2">
             <b>&nbsp;&nbsp;&nbsp;&nbsp;{{i.1}}&nbsp;&nbsp;&nbsp;&nbsp;</b></font></button>
             {% else %}
-            <button class="button_y" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/down_10r_fix/get/{{i.1}}';"><font size="2">
+            <button class="button_y" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/down_10r_fix/get/{{i.4}}';"><font size="2">
             <b>&nbsp;&nbsp;&nbsp;&nbsp;{{i.1}}&nbsp;&nbsp;&nbsp;&nbsp;</b></font></button>
             {% endif %}
         {% endfor %}
@@ -85,6 +85,10 @@
 
 
 </div>
+
+
+
+</div><!--End of scale Size-->
 </center>
 
 {% endblock %}  <!-- End content Block -->
